[package]
name = "bus_queue"
version = "0.5.0"
authors = ["Filip Dulic <filip.dulic@gmail.com>", "Vladan Popovic <vladanovic@gmail.com>", "Bojan Petrovic <bojan_petrovic@fastmail.fm>"]
description = "Lock-free Bounded non-Blocking Pub-Sub Queue"
license = "Apache-2.0/MIT"
keywords = ["pubsub", "lock-free", "queue","async","futures"]
repository = "https://github.com/filipdulic/bus-queue"
readme = "README.md"
edition = "2018"

[dependencies]
arc-swap = "0.4.6"
futures = "0.3.4"
crossbeam-channel = "0.4.2"

[[example]]
name = "raw-simple"
path = "examples/raw-simple.rs"

[[example]]
name = "async-simple"
path = "examples/async-simple.rs"
