[package]
name = "bus_queue"
version = "0.5.3"
authors = ["Filip Dulic <filip.dulic@gmail.com>", "Vladan Popovic <vladanovic@gmail.com>", "Bojan Petrovic <bojan_petrovic@fastmail.fm>"]
description = "Lock-free Bounded non-Blocking Pub-Sub Queue"
license = "Apache-2.0/MIT"
keywords = ["pubsub", "lock-free", "queue","async","futures"]
repository = "https://github.com/filipdulic/bus-queue"
readme = "README.md"
edition = "2018"

[dependencies]
arc-swap = {version = "0.4.6", optional = true}
futures-core = "0.3.5"
futures-sink = "0.3.5"
event-listener = "1.0.0"
# conc = {version="0.5.1", optional = true}

[dev-dependencies]
rand = "0.7.3"
futures-test = "0.3.5"
futures = {version = "0.3.5", features = ["thread-pool"]}

[features]
default = ["arcswap", "rwlock"]
arcswap = ["arc-swap"]
# conc-atomic = ["conc"]
rwlock = []

[[example]]
name = "raw-simple"
path = "examples/raw-simple.rs"

[[example]]
name = "async-simple"
path = "examples/async-simple.rs"
