[package]
name = "bus_queue"
version = "0.5.3"
authors = ["Filip Dulic <filip.dulic@gmail.com>", "Vladan Popovic <vladanovic@gmail.com>", "Bojan Petrovic <bojan_petrovic@fastmail.fm>"]
description = "Lock-free Bounded non-Blocking Pub-Sub Queue"
license = "Apache-2.0/MIT"
keywords = ["pubsub", "lock-free", "queue","async","futures"]
repository = "https://github.com/filipdulic/bus-queue"
readme = "README.md"
edition = "2024"

[dependencies]
arc-swap = {version = "1.7.1", optional = true}
futures-core = "0.3.31"
futures-sink = "0.3.31"
event-listener = "5.4.1"
# conc = {version="0.5.1", optional = true}

[dev-dependencies]
rand = "0.10.0-rc.0"
futures-test = "0.3.31"
futures = {version = "0.3.31", features = ["thread-pool"]}

[features]
default = ["arcswap", "rwlock"]
arcswap = ["arc-swap"]
# conc-atomic = ["conc"]
rwlock = []

[[example]]
name = "raw-simple"
path = "examples/raw-simple.rs"

[[example]]
name = "async-simple"
path = "examples/async-simple.rs"
